# RForth

./: .gitignore  23LCV512.txt  ACode.new.txt  ACode.old.txt  ACode.txt  CForth.md  Code.txt  Common.hh  CompileForth.txt  Dev.md  Dev.txt  Doc.md  DogAlarm.txt  DogWatch.txt  EEDemo.txt  EEPROM.txt  EESave.txt  FTDI.txt  FirmwareWords.md  Forth.txt  ForthTutorial.md  Input.cpp  Input.hh  InstructionSet.md  Language.md  Lib.txt  MotionDetect.txt  NativeCommandsArduino.txt  OpCodes.cpp  OpCodes.hh  README.md  README.txt  RForth.ino  Stacks.cpp  Stacks.hh  Storage.cpp  Storage.hh  TODO.txt  atmega329p_registers.txt  bmp180.txt  (+23 more)
Arduino/CForth/: CForth.ino  CForth.md  Constants.h  Dict.cpp  Mem.cpp  Stacks.cpp  Static.cpp  Util.cpp  (+2 more)
TechNotes/: 2022-05-26_symbols.txt  2022-05-27_dictionaries.txt
Tests/: 2026-04-07_atmega328p.txt  2026-04-16_atmega328p_8MHz.txt
code/: Autorun.txt  Curses.txt  Edit.txt  Forth.txt  Input.txt  Lists.txt  Main  MotionDetect.txt  RTC.txt  RTCTest.txt  Random.txt  Speed.txt  Timer.txt  Torch.txt  Util.txt  VikingHouse.txt  basics  buf  cforth.txt  control  cstrings.txt  dict  pins  pwm25k  speed  string  timer0  timer1
old/: 23LCV512.txt  Dev.txt  Input.cpp  OpCodes.cpp  OpCodes.hh  RForth.ino  Storage.cpp  atmega328p_registers.txt  savefileForth.txt
src/: OBSOLETE.txt
src/rf2/: CMakeLists.txt  CSTS.c  DataStack.c  Debug.c  Exceptions.c  Heap.c  Heap.h  Main.c  Numbers.c  Serial.c  Stack.c  Sym.c  TIB.c  common.h  rf2.c  rfcommon.h
v3/: Dev.md  EEPROM.txt  InstructionSet.md  PINS.txt  TODO.txt  savefileInterpreter.txt  savefilePico.txt
(+20 files in other folders)
